--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   cupertino_icons: ^0.1.2
   image_picker: ^0.6.1+3
   translator: ^0.1.0+7
+  sqflite: ^1.1.6
+  path_provider: 1.1.0
+  image: ^2.1.4
+  photofilters: ^1.0.5
+
 
 
 dev_dependencies:
