--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_ml_vision: ^0.9.2
   cupertino_icons: ^0.1.2
-  image_picker: ^0.6.1+3
+  firebase_ml_vision: ^0.9.2+2
+  image_picker: ^0.6.1+8
   translator: ^0.1.0+7
-  sqflite: ^1.1.6
-  path_provider: 1.1.0
-  image: ^2.1.4
-  photofilters: ^1.0.5
+  diacritic: ^0.1.1
 
 
 
@@ -26,4 +23,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  assets:
+    - assets/remedios.json
+
   uses-material-design: true
+
