--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   image_picker: ^0.6.1+8
   translator: ^0.1.0+7
   diacritic: ^0.1.1
+  floating_action_row: ^0.1.0
+  material_design_icons_flutter: ^3.2.4595
 
 
 
